--- a/requirements.txt
+++ b/requirements.txt
@@ -17,24 +17,24 @@
 # httpx==0.25.1  # For async HTTP requests
 # bcrypt==4.0.1
 
-fastapi==0.104.1
+fastapi==0.99.1
 uvicorn[standard]==0.24.0
 
 # Database
-sqlalchemy==2.0.23
-asyncpg==0.29.0
+sqlalchemy==1.4.54
+asyncpg==0.28.0
 psycopg2-binary==2.9.9
 
 # Auth & Security
-python-jose[cryptography]==3.3.0
+python-jose==3.3.0
 passlib[bcrypt]==1.7.4
-bcrypt==4.0.1
 
-# Config & Validation
+# Validation (Pydantic v1)
+pydantic==1.10.13
+email-validator==1.3.1
+
+# Config
 python-dotenv==1.0.0
-pydantic-settings==2.0.3
-pydantic==2.4.2
-email-validator==2.0.0.post2
 
 # Forms & Templates
 python-multipart==0.0.6
