--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ uvicorn[standard]==0.24.0
 
 # Database
 sqlalchemy==1.4.54
-asyncpg==0.28.0
+psycopg[binary]==3.1.18
 psycopg2-binary==2.9.9
 
 # Auth & Security
