--- a/requirements.txt
+++ b/requirements.txt
@@ -20,20 +20,17 @@
 fastapi==0.99.1
 uvicorn[standard]==0.24.0
 
-# Database
-sqlalchemy==1.4.54
-psycopg[binary]==3.1.18
-psycopg2-binary==2.9.9
+# Database (Python 3.13 compatible)
+sqlalchemy==2.0.23
+psycopg[binary]==3.3.2
 
 # Auth & Security
 python-jose==3.3.0
 passlib[bcrypt]==1.7.4
 
-# Validation (Pydantic v1)
+# Validation (pure python)
 pydantic==1.10.13
 email-validator==1.3.1
-
-# Config
 python-dotenv==1.0.0
 
 # Forms & Templates
