--- a/requirements.txt
+++ b/requirements.txt
@@ -17,27 +17,25 @@
 # httpx==0.25.1  # For async HTTP requests
 # bcrypt==4.0.1
 
-fastapi==0.99.1
+fastapi==0.104.1
 uvicorn[standard]==0.24.0
 
-# Database (Python 3.13 compatible)
 sqlalchemy==2.0.23
-psycopg[binary]==3.3.2
+asyncpg==0.29.0
 
-# Auth & Security
-python-jose==3.3.0
+psycopg2-binary==2.9.9
+
+python-dotenv==1.0.0
+python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 
-# Validation (pure python)
-pydantic==1.10.13
-email-validator==1.3.1
-python-dotenv==1.0.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
+email-validator==2.1.0
 
-# Forms & Templates
 python-multipart==0.0.6
 jinja2==3.1.2
-
-# HTTP
 httpx==0.25.1
+
 
 
